# intro_to_impact_evaluation_with_python

./: .gitignore  README.md  eratta.md  pyproject.toml
data/: ch2_logdata.csv  ch3_aatest_trial.csv  ch3_cluster_trial.csv  ch3_noncompliance_abtest.csv  ch3_stratified_trial.csv  ch4_organ_donations_full.csv  ch4_organ_donations_short.csv  ch5_coupon.csv  ch5_coupon_v2.csv  lenta_dataset.csv
notebooks/: Colab.ipynb  chapter0_dataset.ipynb  chapter2.ipynb  chapter3_abtest_detail.ipynb  chapter4_did.ipynb  chapter5_rdd.ipynb  chapter5_rdd_data.ipynb
