[tool.poetry]
name = "intro-to-impact-evaluation-with-python"
version = "0.1.0"
description = ""
authors = ["Hirotake Ito <ito_hirotake@cyberagent.co.jp>"]

[tool.poetry.dependencies]
python = "3.8.5"
pandas = "^1.4.1"
numpy = "^1.22.2"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
statsmodels = "^0.13.2"
seaborn = "^0.12.2"
jupyterlab = "^4.0.6"
ipython = "8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
