[tool.poetry]
name = "intro-to-impact-evaluation-with-python"
version = "0.1.0"
description = ""
authors = ["Hirotake Ito <ito_hirotake@cyberagent.co.jp>"]

[tool.poetry.dependencies]
python = "3.8.5"
pandas = ">=2.00"
numpy = "^1.22.2"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
statsmodels = "0.14.1"
seaborn = "^0.12.2"
jupyterlab = "^4.0.6"
ipython = "8.0.1"
linearmodels = "^4.0.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
rdrobust = "^1.2.1"
rddensity = "^2.4.1"
causaldata = "^0.1.3"
scikit-uplift = "^0.5.1"

[tool.poetry.dev-dependencies]
jupyterlab-code-formatter = "^2.2.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
